<resources>
    <string name="app_name">ECommerce</string>
    <string name="label_must_fill">Required.</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="message_success_save">Berhasil menyimpan.</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_bag">My Bag</string>
    <string name="item">item</string>
    <string name="checkout">Checkout</string>
    <string name="checkout2">CHECKOUT</string>
    <string name="name">Name</string>
    <string name="addres">Addres</string>
    <string name="add_adres">Add Addres</string>
    <string name="province">Province</string>
    <string name="add_province">Add Province</string>
    <string name="city">City</string>
    <string name="add_city">Add City</string>
    <string name="subdistrict">Subdistrict</string>
    <string name="add_subdistrict">Add Subdistrict</string>
    <string name="note">Note</string>
    <string name="add_note">Add Note</string>
    <string name="checkout3">Checkout</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="men_s_running_shoes">MEN\'S RUNNING SHOES</string>
    <string name="nike_air_jordan_pf_xxxiv_retro_blue_void">Nike Air Jordan PF XXXIV Retro Blue Void</string>
    <string name="_4_5_1000_reviews">4,5(1000 Reviews)</string>
    <string name="rp_3_721_554">Rp. 3.721.554</string>
    <string name="colors_available">COLORS AVAILABLE</string>
    <string name="select_your_size">SELECT YOUR SIZE</string>
    <string name="checkout4">Add To Cart</string>
    <string name="todo4">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="its_okey_to_be_a_little">Its okey to be a little</string>
    <string name="obsessed_with_shoes">Obsessed with shoes!</string>
    <string name="top_sneakers">Top Sneakers</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="login">Login</string>
    <string name="enter_your_number_phone_and_password">Enter your number phone and password</string>
    <string name="telephone_number">Telephone number</string>
    <string name="_62_992_127">+62 992 127</string>
    <string name="password">Password</string>
    <string name="password2">Password</string>
    <string name="login2">Login</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="empty_name">Empty Name</string>
    <string name="empty_phone">Empty Phone</string>
    <string name="todo12">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo13">TODO</string>
    <string name="logout">Logout</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="todo16">TODO</string>
    <string name="todo17">TODO</string>
    <string name="_1">1</string>
    <string name="todo18">TODO</string>
    <string name="rp_2000000000">RP.2000000000</string>
    <string name="nike_jordan_retro_blue">Nike Jordan Retro Blue</string>
    <string name="todo19">TODO</string>
    <string name="todo20">TODO</string>
    <string name="todo21">TODO</string>
    <string name="todo22">TODO</string>
    <string name="_11">1</string>
    <string name="save">Save</string>
    <string name="todo23">TODO</string>
    <string name="telephone_number2">Telephone Number</string>
    <string name="your_name">Your Name</string>
    <string name="share_a_little_bit_of_yourself">Share a Little Bit of YourSelf</string>
    <string name="todo24">TODO</string>
    <string name="todo25">TODO</string>
    <string name="todo26">TODO</string>
    <string name="todo27">TODO</string>
    <string name="add_phone">Add Phone</string>
    <string name="add_password">Add Password</string>
    <string name="todo28">TODO</string>
    <string name="todo29">TODO</string>
    <string name="todo30">TODO</string>
</resources>