<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_15"
        tools:context=".ui.checkout.CheckoutActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back_checkout"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="8dp"
                android:foreground="?selectableItemBackground"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.102"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/checkout2"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.537"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:text="@string/name"
            android:textColor="@color/blue_50"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_name_checkout"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_75sdp"
            android:autofillHints="name"
            android:background="@drawable/custom_layout_frame"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="Add Name"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.181"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_125sdp"
            android:text="@string/addres"
            android:textColor="@color/blue_50"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_alamat_checkout"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_145sdp"
            android:autofillHints="postalAddress"
            android:background="@drawable/custom_layout_frame"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/add_adres"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.181" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_195sdp"
            android:text="@string/province"
            android:textColor="@color/blue_50"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_provinsi_checkout"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_215sdp"
            android:autofillHints="name"
            android:background="@drawable/custom_layout_frame"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/add_province"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.181" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_265sdp"
            android:text="@string/city"
            android:textColor="@color/blue_50"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_kota_checkout"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_285sdp"
            android:autofillHints="name"
            android:background="@drawable/custom_layout_frame"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/add_city"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.659"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_335sdp"
            android:text="@string/subdistrict"
            android:textColor="@color/blue_50"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_kecamatan_checkout"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_355sdp"
            android:autofillHints="name"
            android:background="@drawable/custom_layout_frame"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/add_subdistrict"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.181" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_405sdp"
            android:text="@string/note"
            android:textColor="@color/blue_50"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_note_checkout"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_425sdp"
            android:autofillHints="name"
            android:background="@drawable/custom_layout_frame"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/add_note"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.181" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_checkout_checkout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="668dp"
            android:background="@color/blue_100"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/checkout3"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.465"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.672"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>